    http://anonscm.debian.org.

  [ Ansgar Burchardt ]
  * debian/control: Convert Vcs-* fields to Git.
  * DhMakePerl::Config: Change default VCS to Git.

  [ Salvatore Bonaccorso ]
  * DhMakePerl::Command::make: Fix bug in creation of .gitignore file in
    setup_git_repository, causing that the process stopped and no pristine-tar
    branch got created.

 -- Damyan Ivanov <dmn@debian.org>  Thu, 21 Jul 2011 20:58:01 +0200

dh-make-perl (0.73-1) unstable; urgency=low

  [ gregor herrmann ]
  * Build.PL: add missing modules.
  * Update copyright notices.
  * Debian::Control::Stanza::Source: add XS-Autobuild field; mention all
    fields in POD, and sort list.

  [ Salvatore Bonaccorso ]
  * create packages with Standards-Version 3.9.2.
  * Bump Standards-Version to 3.9.2. 
  * Debian::Control::Stanza::Source: Add DM-Upload-Allowed field to
    supported fields for source stanza in debian/control.
  * Debian::Control::Stanza::Source: Order fields similar to dh_make generated
    templates.

  [ Nicholas Bamber ]
  * Updated authorship notice

  [ Damyan Ivanov ]
  * Add --vcs option, guiding VCS-* headers' creation in --pkg-perl mode. It
    also helps with the initial repository creation for Git
  * Do not die when the WNPP cache cannot be read, for example due to binary
    format change in Storable. Also, use platform-independent storage.
    Closes: #626987 - dh-make-perl: Debian::WNPP::Query does not correctly
    invalidate cache or use platform-netural Storable format
  * bump default debhelper compatibility level to 8
  * note oldstable has perl 5.10.0, not 5.8.8
  * apply a patch from Manfred Stock fixing AptContents not to miss
    alternative dependencies when a given module is found in more than one
    package. Closes: #622852
  * Use CPAN::Meta for processing META.* files, adding support for META.json.
  * When no META file is available, try parsing name and version from Build.PL
    before Makefile.PL. Closes: #589946