@@ -64,7 +64,7 @@ Depends: debhelper (>= 7), ${perl:Depends}, ${misc:Depends},
  libwww-mechanize-perl,
  libyaml-perl,
  perl (>= 5.10.1) | libmodule-corelist-perl (>= 2.14)
-Recommends: apt-file,
+Recommends: apt-file (>= 2.5.0),
  git
 Description: helper for creating Debian packages from perl modules
  dh-make-perl will create the files required to build a Debian source
